# vulcanum

./: .dockerignore  .gitattributes  .gitignore  .kaneo-conf.json  AGENTS.md  Cargo.toml  Makefile  README.md  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
cli/: AGENTS.md  Cargo.toml  package.json
cli/src/: api_error.rs  client.rs  console.rs  main.rs  prompts.rs  state.rs  token.rs
cli/src/client/: mod.rs  types.rs
cli/src/commands/: connect.rs  daemon.rs  mod.rs  self_delete.rs  self_delete_tests.rs  setup.rs  skills.rs  skills_tests.rs
cli/src/harness/: errors.rs  errors_tests.rs  host.rs  host_tests.rs  kata.rs  kata_tests.rs  mod.rs  parse.rs  runner.rs  validate.rs
cli/src/tests/: console.rs  http.rs  main.rs  mod.rs
main-app/: AGENTS.md  Cargo.toml
main-app/docker/: Dockerfile
main-app/migrations/: 001_create_users_table.up.sql  002_work_runs_schema.up.sql  003_drop_worker_access_token.up.sql  004_add_refresh_expires_at.up.sql  005_add_agents_md_and_repo_url.down.sql  006_widen_tokens_duration_to_bigint.up.sql  007_add_kaneo_workspace_id.down.sql  007_add_kaneo_workspace_id.up.sql
main-app/src/: app_state.rs  config.rs  errors.rs  main.rs  test_helpers.rs
main-app/src/db/: db_config.rs  mod.rs  token_store.rs  users.rs  users_tests.rs
main-app/src/models/: user.rs
main-app/src/routes/: auth.rs  health.rs  instance_auth.rs  jobs.rs  jobs_tests.rs  mod.rs  project_configs.rs  project_configs_tests.rs  status.rs  workers.rs  workers_tests.rs
main-app/src/services/: mod.rs
server/: AGENTS.md  Cargo.toml  package.json
server/docker/: Dockerfile
server/migrations/: 0001_identity_and_teams.down.sql  0001_identity_and_teams.up.sql  0001_users_teams_auth.down.sql  0001_users_teams_auth.up.sql  0002_integrations_projects.down.sql  0002_integrations_projects.up.sql  0002_projects_and_integrations.down.sql  0002_projects_and_integrations.up.sql  0003_work_execution.down.sql  0003_work_execution.up.sql  0003_workers_work_runs_events.down.sql  0003_workers_work_runs_events.up.sql  0004_instance_refresh_tokens.down.sql  0004_instance_refresh_tokens.up.sql  0004_model_providers.down.sql  0004_model_providers.up.sql  0005_project_usage_daily.down.sql  0005_project_usage_daily.up.sql  0006_project_usage_run_counts.down.sql  0006_project_usage_run_counts.up.sql  0006_team_defaults_multi_repos.down.sql  0006_team_defaults_multi_repos.up.sql  0007_github_review_triggers.down.sql  0007_github_review_triggers.up.sql  0007_pr_review_automation.down.sql  0007_pr_review_automation.up.sql  0008_github_review_identity.down.sql  0008_github_review_identity.up.sql  0008_review_flow_defaults_and_cycles.down.sql  0008_review_flow_defaults_and_cycles.up.sql  0008_worker_capacity_and_fk_fix.down.sql  0008_worker_capacity_and_fk_fix.up.sql  0009_project_in_progress_limits.down.sql  0009_project_in_progress_limits.up.sql  0010_chatgpt_model_provider_auth.down.sql  0010_chatgpt_model_provider_auth.up.sql  0010_prompt_defaults_in_code.down.sql  0010_prompt_defaults_in_code.up.sql  0011_remove_review_pickup_column.down.sql  0011_remove_review_pickup_column.up.sql  (+65 more)
server/src/: app_state.rs  config.rs  e2e_integration_tests.rs  e2e_worker_flow_tests.rs  errors.rs  errors_tests.rs  lib.rs  main.rs  queryer.rs  test_helpers.rs
server/src/db/: auth.rs  dispatcher.rs  github_app.rs  mod.rs  project_configs.rs  project_usage.rs  provider_configs.rs  task_augmentations.rs  users.rs  work_run_events.rs  workers.rs
server/src/errors/: conversions.rs  provider_conversions.rs
server/src/models/: mod.rs
server/src/routes/: auth.rs  auth_tests.rs  auth_utils.rs  github.rs  github_tests.rs  instance_auth.rs  instance_auth_tests.rs  jobs.rs  jobs_event_tests.rs  jobs_tests.rs  mod.rs  model_providers.rs  project_configs.rs  project_configs_tests.rs  providers.rs  status.rs  task_board.rs  team_auth.rs  teams.rs  teams_tests.rs  work_runs.rs  work_runs_tests.rs  worker_auth.rs  worker_or_instance_auth.rs  workers.rs  workers_tests.rs
server/src/services/: mod.rs
server/src/tests/: e2e_integration_tests.rs  e2e_worker_flow_tests.rs  helpers.rs  mod.rs
server/src/util/: db.rs  github.rs  github_tests.rs  mod.rs  option.rs  serde.rs
shared/: Cargo.toml  package.json
shared/src/: api_error.rs  api_types.rs  api_types_tests.rs  app_state.rs  app_state_tests.rs  client.rs  client_tests.rs  config.rs  constants.rs  crypto.rs  lib.rs  paths.rs  review_feedback.rs  telemetry.rs  telemetry_tests.rs  token.rs  validate.rs  validate_tests.rs  worker_state.rs  worker_state_tests.rs
shared/src/api/: app.rs  mod.rs  wire.rs
shared/src/client/: app.rs  auth.rs  mod.rs
shared/src/runtime/: agent.rs  docker.rs  docker_tests.rs  errors.rs  errors_tests.rs  isolation.rs  mod.rs  types.rs  types_tests.rs
shared/src/state/: app.rs  file.rs  mod.rs  paths.rs  worker.rs
shared/src/tests/: api_types.rs  app_state.rs  mod.rs  review_feedback.rs  telemetry.rs  validate.rs  worker_state.rs
worker-server/: AGENTS.md  Cargo.toml  package.json
worker-server/src/: main.rs
worker-server/src/daemon/: auth.rs  auth_tests.rs  job.rs  mod.rs  queue.rs  queue_tests.rs  recovery.rs  tick.rs
worker-server/src/harness/: container.rs  container_tests.rs  dispatch.rs  docker_delegate.rs  errors.rs  errors_tests.rs  gvisor.rs  gvisor_tests.rs  host.rs  host_tests.rs  kata.rs  kata_tests.rs  mod.rs  parse.rs  parse_tests.rs  prepare.rs  prepare_tests.rs  prompts.rs  runner.rs
worker-server/src/isolation/: checkout.rs  checkout_tests.rs  factory.rs  github_credentials.rs  github_credentials_tests.rs  mod.rs  workspace.rs  workspace_tests.rs
worker-server/src/opencode/: events.rs  health.rs  mod.rs  session.rs
worker-server/src/providers/: logging.rs  logging_tests.rs  mod.rs  runtime.rs
worker-server/src/recovery/: checks.rs  cleanup.rs  mod.rs  recover_session.rs  recover_session_tests.rs  task.rs
worker-server/src/runtime/: export.rs  export_tests.rs  launch.rs  launch_tests.rs  mapping.rs  mapping_tests.rs  mod.rs  recovery.rs  recovery_task.rs
(+1448 files in other folders)
