[package]
name = "vulcanum-cli"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "vulcanum"
path = "src/main.rs"

[dependencies]
vulcanum-shared = { path = "../shared" }
anyhow = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
url = "2"
uuid = "1"
unicode-width = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
indicatif = "0.17"
dialoguer = "0.12"
open = "5"
tracing = "0.1"
chrono = "0.4"
sys-info = "0.9"
