[package]
name = "vulcanum-main-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
kaneo-cli = { git = "https://github.com/EzyGang/kaneo-cli.git", branch = "main" }
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
log = "0.4"
pretty_env_logger = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
