[package]
name = "vulcanum-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "vulcanum_server"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "vulcanum-web"
path = "src/main.rs"

[[bin]]
name = "vulcanum-dispatcher"
path = "src/bin/dispatcher.rs"

[dependencies]
vulcanum-shared = { path = "../shared" }
actix-web = "4"
actix-cors = "0.7"
kaneo-cli = { git = "https://github.com/EzyGang/kaneo-cli.git", branch = "main" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
hex = "0.4"
jsonwebtoken = "9"
log = "0.4"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
redis = { version = "1.2.1", features = ["tokio-comp"] }

[dev-dependencies]
tracing-test = "0.2"
