[package]
name = "vulcanum-worker-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vulcanum-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "sync", "fs"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
vulcanum-shared = { path = "../shared" }
