[package]
name = "vulcanum-worker-server"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "vulcanum-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
eventsource-stream = "0.2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "sync", "fs"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
vulcanum-shared = { path = "../shared" }
