[package]
name = "vulcanum-worker-server"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "vulcanum-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
eventsource-stream = "0.2"
futures = "0.3"
flate2 = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
semver = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "sync", "fs", "io-util"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
vulcanum-shared = { path = "../shared" }
